<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/Button1"

            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id"
            android:clickable="true"

            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button2"
            android:text="@string/id2"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button3"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id3"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button4"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id4"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button5"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id5"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/Button6"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id6"
            android:layout_height="100dp" />

       <!--<Button
            android:id="@+id/Button7"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id7"
            android:layout_height="100dp" />  -->
        <Button
            android:id="@+id/Button8"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id8"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button9"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id9"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button10"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id10"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button11"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id11"
            android:layout_height="100dp" />
       <!--<Button
            android:id="@+id/Button12"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id12"
            android:layout_height="100dp" />
      -->
        <Button
            android:id="@+id/Button13"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id13"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button14"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id14"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button15"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id15"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/Button16"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:text="@string/id16"
            android:layout_height="100dp" />


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
